[package]
name = "newrelic"
description = "Idiomatic Rust bindings to the New Relic C SDK."

version = "1.0.0"
authors = ["Ankit Das <ankit.das@acko.tech>"]
categories = ["api-bindings"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = "0.14.0"
log = ">0.4.0"
newrelic-sys = "0.1"
