[package]
name = "ackorelic"
version = "0.1.7"
description = "Idiomatic Rust bindings to the New Relic C SDK."
include = ["src/**/*", "Cargo.toml"]
authors = ["Ankit Das <ankit.das@acko.tech>", "AbrarNitk <abrar.nitk@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ackotech/ackorelic"
categories = ["api-bindings"]
keywords = ["newrelic-rust-ffi"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
derive_more = "0.14.0"
log = ">0.4.0"
newrelic-sys = "0.1"
diesel = { version = "1.0.0", features = ["postgres"] }
sqlparser="0.4.0"
lazy_static = "~1.3.0"
